# University_Project-VirtualWorldOOP_CPP

./: CMakeLists.txt  Organism.cpp  Organism.h  README.md  Settings.h  World.cpp  World.h  main.cpp
Animals/: Animal.cpp  Animal.h  Antylopa.cpp  Antylopa.h  Czlowiek.cpp  Czlowiek.h  Lis.cpp  Lis.h  Owca.cpp  Owca.h  Wilk.cpp  Wilk.h  Zolw.cpp  Zolw.h
Plants/: Barszcz.cpp  Barszcz.h  Guarana.cpp  Guarana.h  Jagody.cpp  Jagody.h  Mlecz.cpp  Mlecz.h  Plant.cpp  Plant.h  Trawa.cpp  Trawa.h
